added generar capacitacion